--- a/cup_of_tea/Base.lproj/Main.storyboard
+++ b/cup_of_tea/Base.lproj/Main.storyboard
@@ -43,28 +43,40 @@
                                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qqn-sJ-SCM">
                                                 <rect key="frame" x="14" y="260" width="347" height="352"/>
                                                 <subviews>
-                                                    <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" verticalHuggingPriority="249" text="Detail view content goes here" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="0XM-y9-sOw">
-                                                        <rect key="frame" x="20" y="20" width="307" height="37"/>
+                                                    <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" verticalHuggingPriority="249" text="Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="0XM-y9-sOw">
+                                                        <rect key="frame" x="20" y="20" width="307" height="34"/>
                                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                        <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="32"/>
+                                                        <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="25"/>
                                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Summary" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LnT-gH-XcL">
-                                                        <rect key="frame" x="20" y="54" width="307" height="42"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Summary" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LnT-gH-XcL">
+                                                        <rect key="frame" x="20" y="54" width="307" height="60"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="height" constant="42" id="pN7-FH-Y1S"/>
+                                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="c3O-DP-geP"/>
                                                         </constraints>
                                                         <fontDescription key="fontDescription" name="BradleyHandITCTT-Bold" family="Bradley Hand" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Age" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yD9-cd-Snq">
-                                                        <rect key="frame" x="20" y="104" width="29.5" height="24.5"/>
-                                                        <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="17"/>
-                                                        <nil key="textColor"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="n74-Vq-SQK">
+                                                        <rect key="frame" x="20" y="122" width="58.5" height="29"/>
+                                                        <subviews>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Age" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yD9-cd-Snq">
+                                                                <rect key="frame" x="0.0" y="0.0" width="29.5" height="29"/>
+                                                                <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="17"/>
+                                                                <nil key="textColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="male" translatesAutoresizingMaskIntoConstraints="NO" id="f1x-rF-364">
+                                                                <rect key="frame" x="31.5" y="0.0" width="27" height="29"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="width" constant="27" id="ZCj-95-7UT"/>
+                                                                    <constraint firstAttribute="height" constant="29" id="gEz-wL-kQu"/>
+                                                                </constraints>
+                                                            </imageView>
+                                                        </subviews>
+                                                    </stackView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Interest" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UJO-dV-kSL">
                                                         <rect key="frame" x="20" y="161.5" width="63" height="24.5"/>
                                                         <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="17"/>
@@ -118,36 +130,31 @@
                                                             <action selector="connectButton:" destination="JEX-9P-axG" eventType="touchUpInside" id="Cx7-Er-cCY"/>
                                                         </connections>
                                                     </button>
-                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="male" translatesAutoresizingMaskIntoConstraints="NO" id="f1x-rF-364">
-                                                        <rect key="frame" x="52" y="102" width="27" height="29"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="width" constant="27" id="ZCj-95-7UT"/>
-                                                            <constraint firstAttribute="height" constant="29" id="gEz-wL-kQu"/>
-                                                        </constraints>
-                                                    </imageView>
                                                 </subviews>
                                                 <constraints>
+                                                    <constraint firstItem="n74-Vq-SQK" firstAttribute="top" secondItem="LnT-gH-XcL" secondAttribute="bottom" constant="8" id="1LP-J2-v17"/>
                                                     <constraint firstItem="lcQ-5a-fcV" firstAttribute="leading" secondItem="LnT-gH-XcL" secondAttribute="leading" id="1yI-cC-LCK"/>
                                                     <constraint firstItem="lcQ-5a-fcV" firstAttribute="leading" secondItem="qqn-sJ-SCM" secondAttribute="leading" constant="20" id="39d-oo-XaP"/>
-                                                    <constraint firstItem="yD9-cd-Snq" firstAttribute="top" secondItem="0XM-y9-sOw" secondAttribute="bottom" constant="47" id="4y5-GI-KqN"/>
                                                     <constraint firstItem="i7i-U0-bmC" firstAttribute="top" secondItem="qqn-sJ-SCM" secondAttribute="top" constant="219" id="6Lq-59-0DR"/>
                                                     <constraint firstItem="i7i-U0-bmC" firstAttribute="leading" secondItem="qqn-sJ-SCM" secondAttribute="leading" constant="61" id="7Kw-VV-7LZ"/>
                                                     <constraint firstAttribute="bottom" secondItem="i7i-U0-bmC" secondAttribute="bottom" constant="97" id="8aK-rH-OgD"/>
                                                     <constraint firstItem="LnT-gH-XcL" firstAttribute="top" secondItem="qqn-sJ-SCM" secondAttribute="top" constant="54" id="8cH-6P-coH"/>
                                                     <constraint firstItem="lcQ-5a-fcV" firstAttribute="centerX" secondItem="qqn-sJ-SCM" secondAttribute="centerX" id="AUF-c7-BjD"/>
                                                     <constraint firstItem="i7i-U0-bmC" firstAttribute="centerX" secondItem="0XM-y9-sOw" secondAttribute="centerX" id="BZK-Do-Mme"/>
-                                                    <constraint firstItem="f1x-rF-364" firstAttribute="leading" secondItem="yD9-cd-Snq" secondAttribute="trailing" constant="2.5" id="DS9-hU-cJf"/>
-                                                    <constraint firstItem="f1x-rF-364" firstAttribute="top" secondItem="LnT-gH-XcL" secondAttribute="bottom" constant="6" id="GYu-tH-Zrd"/>
+                                                    <constraint firstItem="LnT-gH-XcL" firstAttribute="top" secondItem="0XM-y9-sOw" secondAttribute="bottom" id="MsC-8A-Gsk"/>
                                                     <constraint firstItem="lcQ-5a-fcV" firstAttribute="leading" secondItem="0XM-y9-sOw" secondAttribute="leading" id="NhG-zu-o0u"/>
-                                                    <constraint firstItem="yD9-cd-Snq" firstAttribute="top" secondItem="LnT-gH-XcL" secondAttribute="bottom" constant="8" symbolic="YES" id="TFa-uH-Lgk"/>
+                                                    <constraint firstItem="n74-Vq-SQK" firstAttribute="top" secondItem="qqn-sJ-SCM" secondAttribute="top" constant="122" id="Uqy-Ov-lFu"/>
+                                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="UJO-dV-kSL" secondAttribute="trailing" constant="20" symbolic="YES" id="WHP-Nr-EZc"/>
                                                     <constraint firstItem="i7i-U0-bmC" firstAttribute="top" secondItem="UJO-dV-kSL" secondAttribute="bottom" constant="33" id="WgG-UD-MoK"/>
                                                     <constraint firstItem="i7i-U0-bmC" firstAttribute="centerX" secondItem="qqn-sJ-SCM" secondAttribute="centerX" id="bAT-8D-19S"/>
                                                     <constraint firstItem="lcQ-5a-fcV" firstAttribute="leading" secondItem="UJO-dV-kSL" secondAttribute="leading" id="gqU-CM-hmH"/>
+                                                    <constraint firstItem="UJO-dV-kSL" firstAttribute="top" secondItem="n74-Vq-SQK" secondAttribute="bottom" constant="10.5" id="grQ-51-3cy"/>
+                                                    <constraint firstItem="n74-Vq-SQK" firstAttribute="leading" secondItem="UJO-dV-kSL" secondAttribute="leading" id="hP0-sC-DT4"/>
                                                     <constraint firstAttribute="trailing" secondItem="i7i-U0-bmC" secondAttribute="trailing" constant="61" id="jVm-YQ-jbB"/>
+                                                    <constraint firstItem="n74-Vq-SQK" firstAttribute="leading" secondItem="qqn-sJ-SCM" secondAttribute="leading" constant="20" id="lGc-Q6-q4b"/>
                                                     <constraint firstItem="lcQ-5a-fcV" firstAttribute="top" secondItem="i7i-U0-bmC" secondAttribute="bottom" constant="42" id="qfI-OW-dd0"/>
                                                     <constraint firstItem="i7i-U0-bmC" firstAttribute="centerX" secondItem="LnT-gH-XcL" secondAttribute="centerX" id="rYr-gz-kg9"/>
                                                     <constraint firstItem="0XM-y9-sOw" firstAttribute="top" secondItem="qqn-sJ-SCM" secondAttribute="top" constant="20" id="vDH-7t-Xjk"/>
-                                                    <constraint firstItem="lcQ-5a-fcV" firstAttribute="leading" secondItem="yD9-cd-Snq" secondAttribute="leading" id="xrV-LM-KeM"/>
                                                 </constraints>
                                             </scrollView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" semanticContentAttribute="playback" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile_picture_placeholder" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="N2n-se-Lb1">
@@ -368,14 +375,17 @@
                                 <rect key="frame" x="25" y="306" width="325" height="335"/>
                                 <subviews>
                                     <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" verticalHuggingPriority="249" text="Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="j5T-cl-BQV">
-                                        <rect key="frame" x="0.0" y="0.0" width="325" height="69.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="325" height="41"/>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="24"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Summary" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C5e-ZG-jvv">
-                                        <rect key="frame" x="0.0" y="80.5" width="325" height="21.5"/>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Summary" lineBreakMode="wordWrap" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C5e-ZG-jvv">
+                                        <rect key="frame" x="0.0" y="52" width="325" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="bwS-a3-woQ"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" name="BradleyHandITCTT-Bold" family="Bradley Hand" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -1451,6 +1461,6 @@
         <image name="profile_picture_placeholder" width="300" height="300"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Xnb-pj-38q"/>
+        <segue reference="4Zx-XU-HpF"/>
     </inferredMetricsTieBreakers>
 </document>
